--- a/modules/themes/nord/waybar.css
+++ b/modules/themes/nord/waybar.css
@@ -1,79 +1,31 @@
-@keyframes blink-warning {
-  70% {
-    color: @light;
-  }
-
-  to {
-    color: @light;
-    background-color: @warning;
-  }
-}
-
-@keyframes blink-critical {
-  70% {
-    color: @light;
-  }
-
-  to {
-    color: @light;
-    background-color: @critical;
-  }
-}
-
-/* Nord */
-@define-color bg #2E3440;
-/*@define-color bg #353C4A;*/
-@define-color light #D8DEE9;
-/*@define-color dark @nord_dark_font;*/
-@define-color warning #ebcb8b;
-@define-color critical #BF616A;
-@define-color mode #434C5E;
-/*@define-color workspaces @bg;*/
-/*@define-color workspaces @nord_dark_font;*/
-/*@define-color workspacesfocused #434C5E;*/
-@define-color workspacesfocused #4C566A;
-@define-color tray @workspacesfocused;
-@define-color sound #EBCB8B;
-@define-color network #5D7096;
-@define-color memory #546484;
-@define-color cpu #596A8D;
-@define-color temp #4D5C78;
-@define-color layout #5e81ac;
-@define-color battery #88c0d0;
-@define-color date #434C5E;
-@define-color time #434C5E;
-@define-color backlight #434C5E;
-@define-color nord_bg #434C5E;
-@define-color nord_bg_blue #546484;
-@define-color nord_light #D8DEE9;
-@define-color nord_light_font #D8DEE9;
-@define-color nord_dark_font #434C5E;
+@import url("./scheme.css");
 
 * {
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 600;
+  font-family: "Maple Mono NF"
 }
 
 tooltip {
-  background: @bg;
+  background: @base00;
+  border: 2px solid @base0B;
+  border-radius: 0;
+  
 }
 
 #waybar {
-  /* background: alpha(@nord_bg_blue, 0.5); */
-  border-radius: 3px;
-  background: alpha(@nord_bg_blue, 0.6);
-  color: @light;
+  background: @base01;
+  color: @base04;
+  border-bottom: 2px solid @base00;
 }
 
 .modules-left,
 .modules-right,
 .module-center {
-  padding: 7px;
-  border-radius: 3px;
 }
 
-/* Each module */
 #battery,
+#bluetooth,
 #clock,
 #cpu,
 #custom-layout,
@@ -81,102 +33,85 @@ tooltip {
 #mode,
 #network,
 #pulseaudio,
-#temperature,
-#custom-alsa,
-#custom-pacman,
-#custom-weather,
-#custom-gpu,
+#systemd-failed-units,
 #tray,
-#backlight,
-#language,
-#custom-cpugovernor {
+#window {
   padding-left: 16px;
   padding-right: 16px;
 }
 
-/* Each module that should blink */
-#mode,
-#memory,
-#temperature,
-#battery {
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+#battery:hover,
+#bluetooth:hover,
+#clock:hover,
+#cpu:hover,
+#custom-layout:hover,
+#memory:hover,
+#mode:hover,
+#network:hover,
+#pulseaudio:hover,
+#systemd-failed-units:hover,
+#tray:hover {
+  background: @base00;
 }
 
-/* Each critical module */
 #memory.critical,
 #cpu.critical,
 #temperature.critical,
-#battery.critical {
-  color: @critical;
+#battery.critical,
+#system-failed-units.degraded {
+  color: @base08;
 }
 
-/* Each critical that should blink */
-#mode,
-#memory.critical,
-#temperature.critical,
-#battery.critical.discharging {
-  animation-name: blink-critical;
-  animation-duration: 2s;
-}
-
-/* Each warning */
 #network.disconnected,
 #memory.warning,
 #cpu.warning,
 #temperature.warning,
 #battery.warning {
-  background: @warning;
-  color: @nord_dark_font;
-}
-
-/* Each warning that should blink */
-#battery.warning.discharging {
-  animation-name: blink-warning;
-  animation-duration: 3s;
+  background: @base0A;
+  color: @base01;
 }
 
 #workspaces button {
   all: unset;
   padding: 0 8px;
-  color: @workspacefocused;
+}
+
+#workspace button:hover {
+  background: @base04;
+  color: @base01;
 }
 
 #workspaces button.focused,
-#workspaces button.active,
-#workspaces button.empty.active {
-  background: @nord_bg_blue;
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+#workspaces button.visible {
+  background: @base04;
+  color: @base01;
+}
+
+#workspaces button.urgent {
+  background: @base09;
+  color: @base01;
 }
 
 #workspaces button.empty {
-  text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
+  color: @base02;
 }
 
 #window {
+  color: @base07;
   margin-left: 20px;
-  opacity: 0.5;
 }
 
-#bluetooth {
-  padding: 0 0.6em;
+#mode {
+  font-weight: 800;
+  background: @base0E;
+  color: @base01;
 }
 
-#cpu.critical {
-  color: @nord_dark_font;
+#pulseaudio.muted,
+#pulseaudio.source-muted {
+  color: @base0A;
 }
 
 #clock {
-  color: #D8DEE9;
-}
-
-#pulseaudio.muted {
-  background: #BF616A;
-  color: #BF616A;
-}
-
-#pulseaudio.source-muted {
-  background: #D08770;
-  color: #D8DEE9;
+  font-weight: 900;
 }
